[package]
name = "revolt"
version = "0.1.0"
edition = "2018"
description = "An API wrapper for revolt"
license-file = "LICENSE"
documentation = "https://docs.rs/revolt"
repository = "https://github.com/AkiaCode/revolt.rs"
authors = ["Catry"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "*", default-features = false, features = ["rustls-tls", "connect"] }
tokio = { version = "1.10.1", default-features = false, features = ["rt", "time", "sync"]}
futures-util = "0.3.16"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
serde_json = "1.0.67"
reqwest = { version = "0.11.4", default-features = false, features = ["json"]}
ulid = { version = "0.4.1", default-features = false }
async-trait = "0.1.51"